UserApp/src/main/java/com/example/UserApp/errors/UserNotFoundException.java
package com.example.UserApp.errors;

public class UserNotFoundException extends Exception {

}
